Intro_To_Kubernetes/act3/soln/soln.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: myapp # You can specify a namespace in the manifest.
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: psql-db # This label describes which pods to manage. This must match spec.template.metadata.labels below.
  template:
    metadata:
      labels:
        app.kubernetes.io/name: psql-db # This label is applied to pods created by this Deployment. This must match spec.selector.matchLabels.
    spec:
      containers:
        - name: postgres # The container name doesn't matter for much but is still required.
          image: postgres:14
          ports:
            - containerPort: 5432 # Any ports that you want to connect to, whether internally or externally, must be listed here.
          volumeMounts:
            - name: init
              mountPath: "/docker-entrypoint-initdb.d"
      volumes:
        - name: init # Must match name in volumeMount
          configMap:
            name: postgres-init # Name of configmap to mount
            items:
              - key: "init.sql" # Key of data you want in file from configmap
                path: "init.sql" # Name of file inside of mountPath above above
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: myapp # You can specify a namespace in the manifest.
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: web-server # This label describes which pods to manage. This must match spec.template.metadata.labels below.
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-server # This label is applied to pods created by this Deployment. This must match spec.selector.matchLabels.
    spec:
      containers:
        - name: web-server # The container name doesn't matter for much but is still required.
          image: workshop.acmcyber.com/web-server:latest
          ports:
            - containerPort: 5000 # Any ports that you want to connect to, whether internally or externally, must be listed here.
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: myapp
spec:
  #clusterIP: 10.96.0.10 # This is the IP to access the service if using a ClusterIP. This is ignored for NodePorts, and randomly assigned if left out (since you can just use dns to access instead).
  type: ClusterIP # Or NodePort
  selector:
    app.kubernetes.io/name: psql-db # This must match the pod label from the deployment.
  ports:
    - protocol: TCP # Or UDP, but 99% of the time, you want TCP
      port: 5432 # This is the port inside of the container to expose.
      #targetPort: 31337 # This is the port that you connect to if using a NodePort. This is ignored for ClusterIP services, and if left out, kubernetes will assign a random NodePort for you.
---
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: myapp
spec:
  #clusterIP: 10.96.0.10 # This is the IP to access the service if using a ClusterIP. This is ignored for NodePorts, and randomly assigned if left out (since you can just use dns to access instead).
  type: NodePort # Or NodePort
  selector:
    app.kubernetes.io/name: web-server # This must match the pod label from the deployment.
  ports:
    - protocol: TCP # Or UDP, but 99% of the time, you want TCP
      port: 5000 # This is the port inside of the container to expose.
      nodePort: 31337 # This is the port that you connect to if using a NodePort. This is ignored for ClusterIP services, and if left out, kubernetes will assign a random NodePort for you.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  namespace: myapp
  annotations: # Annotations are like labels except they convey meaning instead of being used for matching.
    cert-manager.io/cluster-issuer: letsencrypt-issuer # We have to annotate the name of the issuer we're using.
spec:
  ingressClassName: traefik # We're using traefik.
  rules:
    - host: 1337.k3.acmcyber.com # The subdomain you want to expose.
      http:
        paths:
          - path: / # This will match all paths.
            pathType: Prefix
            backend:
              service:
                name: web-server-service # The name of the service you're exposing.
                port:
                  number: 5000 # The port that you want to expose.
  tls: # HTTPS configuration
    - hosts:
        - 1337.k3.acmcyber.com # The list of hosts to provision a certificate for.
      secretName: tls-web-server-ingress # The name of the secret to store the certificate in.
